# account/internal/server/docs/swagger.yaml
@@ -1,4 +1,20 @@
+basePath: /
 definitions:
+  server.createAccountRequestBody:
+    properties:
+      first_name:
+        type: string
+      last_name:
+        type: string
+      password:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+      username:
+        type: string
+    type: object
   server.signInRequestBody:
     properties:
       password:
@@ -17,9 +33,149 @@ definitions:
       username:
         type: string
     type: object
+  server.updateAccountRequestBody:
+    properties:
+      first_name:
+        type: string
+      last_name:
+        type: string
+      password:
+        type: string
+    type: object
+host: localhost:8081
 info:
   contact: {}
+  description: Account API documentation
+  title: Account
+  version: "1.0"
 paths:
+  /api/Accounts:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all accounts
+      parameters:
+      - description: Start index
+        in: query
+        name: from
+        type: integer
+      - description: Number of records
+        in: query
+        name: count
+        type: integer
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Get all accounts
+      tags:
+      - Accounts
+    post:
+      consumes:
+      - application/json
+      description: Create a new user account by admin
+      parameters:
+      - description: Account Creation Data
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/server.createAccountRequestBody'
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Create a new account
+      tags:
+      - Accounts
+  /api/Accounts/{id}:
+    delete:
+      description: Soft delete a user account by ID
+      parameters:
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses: {}
+      summary: Soft delete an account by ID
+      tags:
+      - Accounts
+    put:
+      consumes:
+      - application/json
+      description: Update a user account by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Account Details
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/server.createAccountRequestBody'
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Update account by ID
+      tags:
+      - Accounts
+  /api/Accounts/Me:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the current account's data
+      parameters:
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Get current account
+      tags:
+      - Accounts
+  /api/Accounts/Update:
+    put:
+      consumes:
+      - application/json
+      description: Update the current account's information
+      parameters:
+      - description: Account Update Data
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/server.updateAccountRequestBody'
+      - description: Authorization header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Update account
+      tags:
+      - Accounts
   /api/Authentication/Refresh:
     get:
       consumes:
@@ -95,7 +251,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Validate
+      description: Validate regular token
       parameters:
       - description: Authorization header
         in: query
@@ -127,4 +283,6 @@ paths:
           schema:
             type: string
       summary: Hello endpoint
+schemes:
+- http
 swagger: "2.0"
